# qt5-cmake-template

./: .gitignore  CMakeLists.txt  README.md  build_ui.bat
cmake/: qt_common.cmake
src/template/: CMakeLists.txt  main.cpp  mainwindow.cpp  stdafx.h
src/template/translations/: zh_CN.ts
